Fixed most column spacing issues in the tables, made dashboard page record bars bigger, removed some redundant styles.

--- a/public/stylesheets/rails_admin/dashboard.css
+++ b/public/stylesheets/rails_admin/dashboard.css
@@ -9,7 +9,7 @@
 }
 
 .grid .start {
-  padding-left: 5px;
+  padding-left: 8px;
 }
 
 .count .number {
@@ -19,7 +19,7 @@
 .scale {
   margin:0 auto;
   display:block;
-  width:200px;
+  width:300px;
   height:13px;
 }
 
@@ -62,27 +62,11 @@ a.show:hover{
   margin-bottom:5px;
 }
 
-#history{
-  list-style-type:none;
+table#history .start {
+  padding-right: 20px;
 }
 
-#history li{
-  padding-bottom:8px;
-}
-
-#history li a img{
-  border:none;
-  position:relative;
-  top:4px;
-  left:2px;
-}
-
-#history li em{
-  font-style:normal;
-  text-decoration:underline;
-}
-
-#history li{
-  font-size:11px;
-  font-weight:bold;
+table#history td.start {
+  font-weight: bold;
+  padding-right: 20px;
 }
